Adding java source

--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,9 @@
 	<artifactId>maven-project</artifactId>
 	<version>1.0</version>
 	<name>maven-project</name>
+	
+	<properties>
+		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
+	</properties>
 </project>
